--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,20 @@ footer {
     background-color: #1F2937;
 }
 
+.hero {
+    padding: 7rem 30vh;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.hero div {
+    flex: 1;
+}
+
+.subt {
+    padding-right: 1.5rem;
+}
+
 .hero aside,
 nav a {
     font-size: 18px;
@@ -141,14 +155,19 @@ nav a {
     background-color: #3882F6;
     color: #F9FAF8;
     border: #3882F6 solid 1px;
-    padding: 0.5rem 1rem;
-    border-radius: 3px;
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+    margin-top: 1rem;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
-.hero div {
+.hero .img {
     background-color: grey;
     color: #F9FAF8;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .rand h2 {
