--- a/css/style.css
+++ b/css/style.css
@@ -174,13 +174,28 @@ nav a {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    text-align: center;
+    padding: 3rem 0;
+}
+
+.figs {
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    padding-bottom: 7rem;
+}
+
+.rand figure {
+    width: 10rem;
+    text-align: center;
 }
 
 .rand .img {
-    width: 100px;
-    height: 100px;
-    border: #3882F6 solid 2px;
-    border-radius: 10px;
+    width: 10rem;
+    height: 10rem;
+    border: #3882F6 solid 4px;
+    border-radius: 15px;
+    margin-bottom: 0.5rem;
 }
 
 .quote {
