--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,15 @@ nav a {
 .quote {
     background-color: #E5E7EB;
     font-size: 36px;
-    font-weight: light;
+    font-weight: 300;
     font-style: italic;
     color: #1F2937;
+    padding: 7rem 50vh;
+}
+
+.auth {
+    text-align: right;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.5rem;
 }
