--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,10 @@ nav a {
     border-radius: 10px;
     font-weight: 700;
 }
+
+footer {
+    color: #F9FAF8;
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 2rem 0;
+}
